# silkrpc

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CMakeSettings.json  CPPLINT.cfg  README.md  build_all.sh  build_clang_coverage.sh  build_clang_debug.sh  build_clang_release.sh  build_gcc_debug.sh  build_gcc_release.sh  build_gnu_debug.sh  build_gnu_release.sh  codecov.yml  lgtm.yml  rebuild_all.sh  rebuild_clang_coverage.sh  rebuild_clang_debug.sh  rebuild_clang_release.sh  rebuild_gcc_debug.sh  rebuild_gcc_release.sh  requirements.txt  run_linter.bat  run_linter.sh
cmd/: CMakeLists.txt  ethbackend.cpp  ethbackend.hpp  ethbackend_async.cpp  ethbackend_coroutines.cpp  kv_seek.cpp  kv_seek_async.cpp  kv_seek_async_asio.cpp  kv_seek_async_callback.cpp  kv_seek_async_coroutines.cpp  kv_seek_both.cpp  silkrpc_daemon.cpp  silkrpc_toolbox.cpp  test_client.cpp  unit_test.cpp
cmd/benchmark/: CMakeLists.txt  benchmark_test.cpp
docs/: API.md  (+3 more)
silkrpc/: CMakeLists.txt  README.md  buf.yaml  config.hpp  config_test.cpp  context_pool.cpp  context_pool.hpp  context_pool_test.cpp  daemon.cpp  daemon.hpp  daemon_test.cpp  main.cpp
silkrpc/commands/: block_cache.hpp  block_cache_test.cpp  debug_api.cpp  debug_api.hpp  debug_api_test.cpp  engine_api.cpp  engine_api.hpp  engine_api_test.cpp  erigon_api.cpp  erigon_api.hpp  erigon_api_test.cpp  eth_api.cpp  eth_api.hpp  eth_api_test.cpp  eth_util_api.cpp  eth_util_api.hpp  eth_util_api_test.cpp  net_api.cpp  net_api.hpp  net_api_test.cpp  ots_api.cpp  ots_api.hpp  parity_api.cpp  parity_api.hpp  parity_api_test.cpp  rpc_api.hpp  rpc_api_handler.cpp  rpc_api_handler.hpp  rpc_api_table.cpp  rpc_api_table.hpp  rpc_api_test.cpp  tg_api.cpp  tg_api.hpp  tg_api_test.cpp  trace_api.cpp  trace_api.hpp  trace_api_test.cpp  txpool_api.cpp  txpool_api.hpp  util.cpp  (+3 more)
silkrpc/common/: binary_search.cpp  binary_search.hpp  binary_search_test.cpp  block_cache.hpp  clock.cpp  clock.hpp  clock_time.hpp  clock_time_test.cpp  constants.hpp  log.cpp  log.hpp  log_test.cpp  tee.hpp  util.cpp  util.hpp  util_test.cpp
silkrpc/concurrency/: context_pool.cpp  context_pool.hpp  context_pool_test.cpp  wait_strategy.cpp  wait_strategy.hpp  wait_strategy_test.cpp
silkrpc/consensus/: ethash.cpp
silkrpc/core/: account_dumper.cpp  account_dumper.hpp  account_dumper_test.cpp  account_walker.cpp  account_walker.hpp  account_walker_test.cpp  blocks.cpp  blocks.hpp  blocks_test.cpp  cached_chain.cpp  cached_chain.hpp  cached_chain_test.cpp  estimate_gas_oracle test.cpp  estimate_gas_oracle.cpp  estimate_gas_oracle.hpp  estimate_gas_oracle_test.cpp  eth_util_api.cpp  eth_util_api.hpp  evm_access_list_tracer.cpp  evm_access_list_tracer.hpp  evm_debug.cpp  evm_debug.hpp  evm_debug_test.cpp  evm_executor.cpp  evm_executor.hpp  evm_executor_test.cpp  evm_trace.cpp  evm_trace.hpp  evm_trace_test.cpp  evm_tracing.cpp  evm_tracing.hpp  evm_tracing_test.cpp  executor.cpp  executor.hpp  gas_price_oracle.cpp  gas_price_oracle.hpp  gas_price_oracle_test.cpp  receipts.cpp  receipts.hpp  remote_buffer.cpp  (+11 more)
silkrpc/coro/: coroutine.hpp  coroutine_test.cpp  task.hpp  task_test.cpp  use_await.hpp  use_await_test.cpp
silkrpc/ethbackend/: async_etherbase.hpp  async_net_version.hpp  async_protocolVersion.hpp  async_protocol_version.hpp  awaitables.hpp  backend.cpp  backend.hpp  backend_grpc.cpp  backend_grpc.hpp  backend_grpc_test.cpp  backend_interface.hpp  backend_mock.hpp  backend_test.cpp  backend_test.hpp  client.hpp  error.cpp  error.hpp  etherbase_client.hpp  net_version_client.hpp  protocolVersion_client.hpp  protocol_version_client.hpp  remote_backend.cpp  remote_backend.hpp  remote_backend_test.cpp  test_backend.hpp
silkrpc/ethdb/: bitmap.cpp  bitmap.hpp  cbor.cpp  cbor.hpp  cbor_test.cpp  cursor.cpp  cursor.hpp  cursor_test.cpp  database.hpp  tables.hpp  transaction.hpp  transaction_database.cpp  transaction_database.hpp
silkrpc/grpc/: async_completion_handler.hpp  async_completion_handler_test.cpp  async_operation.hpp  async_operation_test.cpp  async_streaming_client.hpp  async_unary_client.hpp  async_unary_client_test.cpp  asynchronous_operation.hpp  awaitables.hpp  awaitables_test.cpp  bidi_streaming_rpc.hpp  completion_poller.cpp  completion_poller.hpp  completion_runner.cpp  completion_runner.hpp  completion_runner_test.cpp  dispatcher.hpp  error.hpp  error_test.cpp  server_streaming_rpc.hpp  unary_rpc.hpp  util.hpp  util_test.cpp
silkrpc/http/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  connection_test.cpp  header.hpp  header_test.cpp  io_context_pool.cpp  io_context_pool.hpp  jwt.cpp  jwt.hpp  jwt_secret.cpp  jwt_secret.hpp  methods.hpp  methods_test.cpp  mime_types.cpp  mime_types.hpp  mime_types_test.cpp  reply.cpp  reply.hpp  reply_test.cpp  request.hpp  request_handler.cpp  request_handler.hpp  request_handler_test.cpp  request_parser.cpp  request_parser.hpp  request_parser_test.cpp  request_test.cpp  server.cpp  server.hpp  server2.cpp  server2.hpp  server_test.cpp
silkrpc/interfaces/: CMakeLists.txt
silkrpc/json/: CPPLINT.cfg  eth_api.cpp  eth_api.hpp  lithium.hpp  lithium_json.hpp  lithium_symbol.hpp  stream.cpp  stream.hpp  stream_test.cpp  types.cpp  types.hpp  types_test.cpp
silkrpc/kv/: async_close_cursor.hpp  async_open_cursor.hpp  async_operation.hpp  async_seek.hpp  awaitables.hpp  client.hpp  client_callback_reactor.hpp  cursor.cpp  cursor.hpp  database.hpp  remote_client.hpp  remote_cursor.hpp  remote_database.hpp  remote_transaction.hpp  transaction.hpp
silkrpc/notes/: README.md
silkrpc/protocol/: version.hpp  version_test.cpp
silkrpc/protos/: README.md  eth.proto  jsonrpc.proto  net.proto  web3.proto
silkrpc/stagedsync/: stages.cpp  stages.hpp  stages_test.cpp
silkrpc/test/: api_test_base.hpp  context_test_base.cpp  context_test_base.hpp  dummy_database.hpp  dummy_transaction.hpp  grpc_actions.hpp  grpc_matcher.hpp  grpc_responder.hpp  kv_test_base.hpp  mock_cursor.hpp  mock_database_reader.hpp  mock_state_cache.hpp  mock_transaction.hpp
silkrpc/txpool/: miner.cpp  miner.hpp  miner_test.cpp  (+3 more)
(+552 files in other folders)
